kubernetes/platform/localstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: finops-bank
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
  - port: 4566
